--- a/pom.xml
+++ b/pom.xml
@@ -61,7 +61,7 @@
         <!-- Javalin -->
         <dependency>
             <groupId>io.javalin</groupId>
-            <artifactId>javalin</artifactId>
+            <artifactId>javalin-bundle</artifactId>
             <version>6.1.3</version>
         </dependency>
 
