--- a/pom.xml
+++ b/pom.xml
@@ -168,6 +168,14 @@
             <scope>test</scope>
         </dependency>
 
+        <!-- OpenAI Java SDK -->
+        <dependency>
+            <groupId>com.theokanning.openai-gpt3-java</groupId>
+            <artifactId>service</artifactId>
+            <version>0.18.2</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
